# synapse

./: .gitignore  Dockerfile  README.md  requirements.txt
ai_robot_ws/: README.md  requirements.txt
ai_robot_ws/log/: latest_build
ai_robot_ws/src/ai_robot_core/: CMakeLists.txt  package.xml  plugin.xml  setup.cfg  setup.py
ai_robot_ws/src/ai_robot_core/config/: depth_to_scan.yaml  nav2_params.yaml  slam_async.yaml
ai_robot_ws/src/ai_robot_core/launch/: core_sensors.launch.py  full_ai_app.launch.py  gazebo.launch.py  mapping.launch.py  nav2_bringup.launch.py  navigation.launch.py  robot_state_publisher.launch.py  teleop.launch.py
ai_robot_ws/src/ai_robot_core/maps/: my_map.pgm
ai_robot_ws/src/ai_robot_core/nodes/: emotion_engine_node.py  face_recognition_node.py  interaction_manager_node.py  memory_manager_node.py  person_follower_node.py
ai_robot_ws/src/ai_robot_core/rviz/: ai_robot.rviz
ai_robot_ws/src/ai_robot_core/ui/: robot_ui.ui  robot_ui_plugin.py
ai_robot_ws/src/ai_robot_core/urdf/: ai_robot.urdf.xacro  gazebo_control.xacro
ai_robot_ws/src/ai_robot_core/worlds/: ai_robot_world.world
ai_robot_ws/src/ai_robot_hardware_drivers/: README.md  package.xml  setup.cfg  setup.py
ai_robot_ws/src/ai_robot_hardware_drivers/ai_robot_hardware_drivers/: audio_interface_node.py  esp8266_bridge_node.py  ir_sensor_node.py  kinect_interface_node.py
ai_robot_ws/src/ai_robot_hardware_drivers/config/: hardware_params.yaml
ai_robot_ws/src/ai_robot_hardware_drivers/launch/: hardware_bringup.launch.py
ai_robot_ws/src/ai_robot_msgs/: CMakeLists.txt  package.xml
ai_robot_ws/src/ai_robot_msgs/msg/: Person.msg  PersonArray.msg
ai_robot_ws/src/ai_robot_msgs/srv/: GetConversation.srv  LookupPerson.srv  RegisterPerson.srv  StoreConversation.srv
firmware/: esp_firmware_32_audio.ino  esp_firmware_8266.ino
src/: README.md
src/synapse_base/: package.xml  setup.cfg  setup.py
src/synapse_base/resource/: synapse_base
src/synapse_base/src/synapse_base/: base_driver_node.py
src/synapse_behaviors/: package.xml  setup.cfg  setup.py
src/synapse_behaviors/resource/: synapse_behaviors
src/synapse_behaviors/src/synapse_behaviors/: behavior_manager.py
src/synapse_bringup/: CMakeLists.txt  package.xml
src/synapse_bringup/launch/: core.launch.py  perception_capture.launch.py  robot_bringup.launch.py  sensors.launch.py
src/synapse_description/: CMakeLists.txt  package.xml
src/synapse_description/launch/: description.launch.py
src/synapse_description/urdf/: synapse_base.urdf.xacro
src/synapse_display/: package.xml  setup.cfg  setup.py
src/synapse_display/resource/: synapse_display
src/synapse_display/src/synapse_display/: face_display_node.py
src/synapse_emotion/: package.xml  setup.cfg  setup.py
src/synapse_emotion/resource/: synapse_emotion
src/synapse_emotion/src/synapse_emotion/: emotion_engine.py
src/synapse_interaction/: package.xml  setup.cfg  setup.py
src/synapse_interaction/resource/: synapse_interaction
src/synapse_interaction/src/synapse_interaction/: conversation_manager.py
src/synapse_interfaces/: CMakeLists.txt  package.xml
src/synapse_interfaces/msg/: DetectedPerson.msg  DetectedPersons.msg  EmotionState.msg
src/synapse_interfaces/srv/: AddConversationMemory.srv  AddPerson.srv  CaptureFaceEncoding.srv  GetPersonByFace.srv  RetrieveRelevantMemories.srv
src/synapse_memory/: package.xml  setup.cfg
src/synapse_memory/resource/: synapse_memory
src/synapse_memory/src/synapse_memory/: memory_server.py
src/synapse_navigation/: CMakeLists.txt  package.xml
src/synapse_navigation/config/: nav2_params_4wd.yaml
src/synapse_navigation/launch/: nav2_bringup.launch.py
src/synapse_perception/: package.xml  setup.cfg  setup.py
src/synapse_perception/resource/: synapse_perception
src/synapse_perception/scripts/: enroll_person.py
src/synapse_perception/src/synapse_perception/: face_perception_node.py
src/synapse_perception/src/synapse_perception/capture/: capture_face_encoding_node.py
src/synapse_teleop/: README.md  package.xml  setup.cfg  setup.py
src/synapse_teleop/resource/: synapse_teleop
src/synapse_teleop/src/synapse_teleop/: keyboard_teleop.py
