<?xml version="1.0"?>
<package format="3">
  <name>synapse_behaviors</name>
  <version>0.1.0</version>
  <description>
    High-level behaviors for Project Synapse.
    Orchestrates autonomous activities such as Patrol, Seek-and-Greet, and Person Following
    by integrating perception (/detected_persons), memory/interaction, and Nav2 navigation.
  </description>

  <maintainer email="maintainer@example.com">Project Synapse Maintainer</maintainer>
  <author email="engineering@example.com">Synapse Engineering Team</author>
  <license>Apache-2.0</license>

  <url type="website">https://example.com/project-synapse</url>
  <url type="repository">https://example.com/project-synapse/repo.git</url>

  <!-- Build system for Python-based ROS 2 packages -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies (ROS 2 core + navigation + TF + messages) -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>

  <!-- Nav2 stack and interfaces used for goal dispatch and feedback -->
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>

  <!-- Internal Synapse interfaces and collaborating packages -->
  <exec_depend>synapse_interfaces</exec_depend>
  <exec_depend>synapse_perception</exec_depend>
  <exec_depend>synapse_navigation</exec_depend>

  <!-- Optional: action messages if using custom actions (uncomment as needed)
  <exec_depend>action_msgs</exec_depend>
  -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
