<?xml version="1.0"?>
<package format="3">
  <name>synapse_description</name>
  <version>0.1.0</version>
  <description>
    Project Synapse robot description package.
    Contains URDF/Xacro files, meshes, and launch utilities for publishing the robot model.
  </description>

  <maintainer email="maintainer@example.com">Project Synapse Maintainer</maintainer>
  <author email="engineering@example.com">Synapse Engineering Team</author>
  <license>Apache-2.0</license>

  <url type="website">https://example.com/project-synapse</url>
  <url type="repository">https://example.com/project-synapse/repo.git</url>

  <!-- Build system to install URDF/Xacro, meshes, and launch assets -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime tools commonly used with description packages -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <!-- Message packages often referenced by fixed frames or example launch files -->
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
