<?xml version="1.0"?>
<package format="3">
  <name>synapse_display</name>
  <version>0.1.0</version>
  <description>
    Display and UI package for Project Synapse.
    Renders animated facial expressions and status overlays on an LCD/OLED/HDMI display.
    Subscribes to emotion state (synapse_interfaces/EmotionState) and other status topics to
    visualize the robot's mood and interaction cues.
  </description>

  <maintainer email="maintainer@example.com">Project Synapse Maintainer</maintainer>
  <author email="engineering@example.com">Synapse Engineering Team</author>
  <license>Apache-2.0</license>

  <url type="website">https://example.com/project-synapse</url>
  <url type="repository">https://example.com/project-synapse/repo.git</url>

  <!-- Build system for Python-based ROS 2 packages -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>synapse_interfaces</exec_depend>

  <!-- Note: UI/rendering backends (e.g., pygame, Pillow) are managed via pip in the environment. -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
