[metadata]
name = synapse_emotion
version = 0.1.0
description = Emotion Engine for Project Synapse. Publishes global affect/mood state via ROS 2.
author = Project Synapse Maintainer
author_email = maintainer@example.com
license = Apache-2.0
url = https://example.com/project-synapse
project_urls =
    Repository = https://example.com/project-synapse/repo.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Robotics

[options]
packages = find:
package_dir =
    = src
zip_safe = false
install_requires =
python_requires = >=3.8

[options.packages.find]
where = src
exclude =
    tests
    tests.*

[options.data_files]
# Required for ROS 2 ament resource indexing and package.xml installation
share/ament_index/resource_index/packages =
    resource/synapse_emotion
share/synapse_emotion =
    package.xml

[options.entry_points]
console_scripts =
    emotion_engine = synapse_emotion.emotion_engine:main

[tool:pytest]
testpaths = tests
addopts = -ra -q

[flake8]
max-line-length = 100
extend-ignore = E203, W503
