<?xml version="1.0"?>
<package format="3">
  <name>synapse_interaction</name>
  <version>0.1.0</version>
  <description>
    Interaction stack for Project Synapse.
    Hosts the Conversation Manager that coordinates microphone activation, speech-to-text (STT),
    memory retrieval, LLM request/response, and text-to-speech (TTS), integrating with the
    Emotion Engine and Perception modules.
  </description>

  <maintainer email="maintainer@example.com">Project Synapse Maintainer</maintainer>
  <author email="engineering@example.com">Synapse Engineering Team</author>
  <license>Apache-2.0</license>

  <url type="website">https://example.com/project-synapse</url>
  <url type="repository">https://example.com/project-synapse/repo.git</url>

  <!-- Build system for Python-based ROS 2 packages -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>synapse_interfaces</exec_depend>

  <!-- Note:
       External STT/TTS/LLM and audio dependencies are managed via the Python environment (pip)
       and intentionally not listed here. See workspace README for setup instructions. -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
