[metadata]
name = synapse_interaction
version = 0.1.0
description = Interaction stack for Project Synapse. Conversation Manager orchestrating STT, memory retrieval, LLM, and TTS with emotion/context.
author = Project Synapse Maintainer
author_email = maintainer@example.com
license = Apache-2.0
url = https://example.com/project-synapse
project_urls =
    Repository = https://example.com/project-synapse/repo.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Scientific/Engineering :: Robotics

[options]
packages = find:
package_dir =
    = src
zip_safe = false
# External deps for STT/TTS/LLM (e.g., sounddevice, vosk, TTS, openai) should be installed in your environment.
# Keep this empty to avoid pip resolutions during colcon builds.
install_requires =
python_requires = >=3.8

[options.packages.find]
where = src
exclude =
    tests
    tests.*

[options.data_files]
# Required for ROS 2 ament resource indexing and package.xml installation
share/ament_index/resource_index/packages =
    resource/synapse_interaction
share/synapse_interaction =
    package.xml

[options.entry_points]
console_scripts =
    conversation_manager = synapse_interaction.conversation_manager:main

[tool:pytest]
testpaths = tests
addopts = -ra -q

[flake8]
max-line-length = 100
extend-ignore = E203, W503
