<?xml version="1.0"?>
<package format="3">
  <name>synapse_memory</name>
  <version>0.1.0</version>
  <description>
    Cognitive Core for Project Synapse: person profile storage (SQLite) and
    conversational memory (vector database) exposed via ROS 2 services.
    Implements AddPerson, GetPersonByFace, AddConversationMemory, and
    RetrieveRelevantMemories services from synapse_interfaces.
  </description>

  <maintainer email="maintainer@example.com">Project Synapse Maintainer</maintainer>
  <author email="engineering@example.com">Synapse Engineering Team</author>
  <license>Apache-2.0</license>

  <url type="website">https://example.com/project-synapse</url>
  <url type="repository">https://example.com/project-synapse/repo.git</url>

  <!-- Build system (Python-based ROS 2 package) -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies (ROS 2) -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>synapse_interfaces</exec_depend>

  <!-- Note:
       Non-ROS Python dependencies (installed via pip) are intentionally not
       listed here (e.g., sentence-transformers, chromadb, numpy, sqlite3 stdlib).
       Manage them via a requirements file or documentation. -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
