[metadata]
name = synapse_memory
version = 0.1.0
description = Cognitive Core for Project Synapse: person profiles (SQLite) and conversational memory (vector DB) exposed via ROS 2 services.
author = Project Synapse Maintainer
author_email = maintainer@example.com
license = Apache-2.0
url = https://example.com/project-synapse
project_urls =
    Repository = https://example.com/project-synapse/repo.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Storage and Retrieval
    Topic :: Scientific/Engineering :: Robotics

[options]
packages = find:
package_dir =
    = src
zip_safe = false
# Non-ROS Python deps (e.g., chromadb, sentence-transformers) should be installed in your environment/venv.
# Keep install_requires empty to avoid pip attempts during colcon build. Documented in workspace README.
install_requires =
python_requires = >=3.8

[options.packages.find]
where = src
exclude =
    tests
    tests.*

[options.data_files]
# Required for ROS 2 ament resource indexing and package.xml installation
share/ament_index/resource_index/packages =
    resource/synapse_memory
share/synapse_memory =
    package.xml

[options.entry_points]
console_scripts =
    memory_server = synapse_memory.memory_server:main

[tool:pytest]
testpaths = tests
addopts = -ra -q

[flake8]
max-line-length = 100
extend-ignore = E203, W503
