<?xml version="1.0"?>
<package format="3">
  <name>synapse_perception</name>
  <version>0.1.0</version>
  <description>
    Project Synapse perception stack.
    Subscribes to camera topics, performs face detection/recognition and person tracking,
    queries Cognitive Core services for identity resolution, and publishes DetectedPersons.
  </description>

  <maintainer email="maintainer@example.com">Project Synapse Maintainer</maintainer>
  <author email="engineering@example.com">Synapse Engineering Team</author>
  <license>Apache-2.0</license>

  <url type="website">https://example.com/project-synapse</url>
  <url type="repository">https://example.com/project-synapse/repo.git</url>

  <!-- Build system for Python-based ROS 2 packages -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies (ROS 2) -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>synapse_interfaces</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>image_common</exec_depend>
  <exec_depend>message_filters</exec_depend>

  <!-- Optional visualization/message types (uncomment if used)
  <exec_depend>vision_msgs</exec_depend>
  -->

  <!-- Testing/linting (optional; enable when tests are added)
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>
  -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
