[metadata]
name = synapse_perception
version = 0.1.0
description = Perception stack for Project Synapse: camera ingestion, face detection/recognition, and person tracking with ROS 2 interfaces.
author = Project Synapse Maintainer
author_email = maintainer@example.com
license = Apache-2.0
url = https://example.com/project-synapse
project_urls =
    Repository = https://example.com/project-synapse/repo.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Scientific/Engineering :: Robotics

[options]
packages = find:
package_dir =
    = src
zip_safe = false
# Keep pip dependencies minimal; ROS 2 provides most runtime deps via apt.
# If you need OpenCV from pip in your environment, add: opencv-python
install_requires =
python_requires = >=3.8

[options.packages.find]
where = src
exclude =
    tests
    tests.*

[options.data_files]
# Required for ROS 2 ament resource indexing and package.xml installation
share/ament_index/resource_index/packages =
    resource/synapse_perception
share/synapse_perception =
    package.xml

[options.entry_points]
console_scripts =
    face_perception_node = synapse_perception.face_perception_node:main
    person_tracker_node = synapse_perception.person_tracker_node:main
    enroll_person = synapse_perception.scripts.enroll_person:main
    capture_face_encoding_node = synapse_perception.capture.capture_face_encoding_node:main

[tool:pytest]
testpaths = tests
addopts = -ra -q

[flake8]
max-line-length = 100
extend-ignore = E203, W503
