<?xml version="1.0"?>
<package format="3">
  <name>synapse_teleop</name>
  <version>0.1.0</version>
  <description>
    Keyboard teleoperation node for Project Synapse. Publishes geometry_msgs/Twist on /cmd_vel
    to manually drive the robot for bring-up and testing (Step 1 deliverable alternative
    to teleop_twist_keyboard).
  </description>

  <maintainer email="maintainer@example.com">Project Synapse Maintainer</maintainer>
  <author email="engineering@example.com">Synapse Engineering Team</author>
  <license>Apache-2.0</license>

  <url type="website">https://example.com/project-synapse</url>
  <url type="repository">https://example.com/project-synapse/repo.git</url>

  <!-- Build system for Python-based ROS 2 packages -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Optional testing/linting (uncomment when tests are added)
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
