[metadata]
name = synapse_teleop
version = 0.1.0
description = Keyboard/controller teleoperation node for Project Synapse (publishes geometry_msgs/Twist on /cmd_vel).
author = Project Synapse Maintainer
author_email = maintainer@example.com
license = Apache-2.0
url = https://example.com/project-synapse
project_urls =
    Repository = https://example.com/project-synapse/repo.git
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
package_dir =
    = src
install_requires =
    rclpy
    geometry_msgs
    std_msgs
python_requires = >=3.8

[options.packages.find]
where = src
exclude =
    tests
    tests.*

[options.data_files]
# Required for ROS 2 ament resource indexing and package.xml installation
share/ament_index/resource_index/packages =
    resource/synapse_teleop
share/synapse_teleop =
    package.xml

[options.entry_points]
console_scripts =
    keyboard_teleop = synapse_teleop.keyboard_teleop:main

[tool:pytest]
testpaths = tests
addopts = -ra -q

[flake8]
max-line-length = 100
extend-ignore = E203, W503
