<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ai_robot_core</name>
  <version>0.0.0</version>
  <description>Synapse : AI Pet Robot Simulation</description>
  <maintainer email="hardcock@tuta.io">FakeCoder01</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>gazebo_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_bringup</depend>
  <depend>depthimage_to_laserscan</depend>
  <depend>xacro</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>
  <depend>ai_robot_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
