<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ai_robot_hardware_drivers</name>
  <version>0.0.0</version>
  <description>Hardware drivers for AI Robot</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <url type="repository">https://github.com/api-v2-1/synapse</url>
  <author email="your.email@example.com">Your Name</author>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <exec_depend>python3-paho-mqtt</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-pyttsx3</exec_depend>
  <exec_depend>python3-pyaudio</exec_depend>
  <exec_depend>cv-bridge</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
